Updated Links MIUI eu and TWRP

--- a/RedmiNote7ToolC.csproj
+++ b/RedmiNote7ToolC.csproj
@@ -83,7 +83,7 @@
     <SignManifests>false</SignManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestCertificateThumbprint>41AF2217FF5662CE13130444AA74250E5CDF6EF3</ManifestCertificateThumbprint>
+    <ManifestCertificateThumbprint>6FBC3C38854E0F2ACAF8A5D1CC3545DE3CACC678</ManifestCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup />
   <PropertyGroup>
@@ -118,6 +118,9 @@
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
     <Prefer32Bit>true</Prefer32Bit>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ManifestKeyFile>RedmiNote7ToolC_TemporaryKey.pfx</ManifestKeyFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="AndroidLib, Version=1.5.2.0, Culture=neutral, processorArchitecture=MSIL">
