--- a/RedmiNote7ToolC/RedmiNote7ToolC/RedmiNote7ToolC.csproj
+++ b/RedmiNote7ToolC/RedmiNote7ToolC/RedmiNote7ToolC.csproj
@@ -125,9 +125,9 @@
     <ManifestKeyFile>RedmiNote7ToolC_TemporaryKey.pfx</ManifestKeyFile>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AndroidLib, Version=1.5.2.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="AndroidLib, Version=1.5.5.0, Culture=neutral, processorArchitecture=AMD64">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\AndroidLib-master\AndroidLib\bin\x64\Debug\AndroidLib.dll</HintPath>
+      <HintPath>..\..\..\RedmiNote7ToolC#\AndroidLib.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="MiUSB, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
