--- a/RedmiNote7ToolC/RedmiNote7ToolC/RedmiNote7ToolC.csproj
+++ b/RedmiNote7ToolC/RedmiNote7ToolC/RedmiNote7ToolC.csproj
@@ -29,8 +29,8 @@
     <PublisherName>Franco28</PublisherName>
     <SuiteName>RedmiNote7Tool</SuiteName>
     <OpenBrowserOnPublish>false</OpenBrowserOnPublish>
-    <ApplicationRevision>2</ApplicationRevision>
-    <ApplicationVersion>1.0.2.2</ApplicationVersion>
+    <ApplicationRevision>3</ApplicationRevision>
+    <ApplicationVersion>1.0.2.3</ApplicationVersion>
     <UseApplicationTrust>true</UseApplicationTrust>
     <CreateDesktopShortcut>true</CreateDesktopShortcut>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -73,8 +73,9 @@
     <OutputPath>..\..\..\..\Desktop\RedmiNote7ToolC#\</OutputPath>
     <DocumentationFile>
     </DocumentationFile>
-    <GenerateSerializationAssemblies>Auto</GenerateSerializationAssemblies>
+    <GenerateSerializationAssemblies>On</GenerateSerializationAssemblies>
     <DefineConstants>TRACE;DEBUG</DefineConstants>
+    <Optimize>true</Optimize>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
     <PlatformTarget>x64</PlatformTarget>
@@ -134,6 +135,7 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\RedmiNote7ToolC#\MiUSB.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
@@ -242,6 +244,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="2.ico" />
+    <None Include="Resources\banner_large.jpg" />
+    <None Include="Resources\banner_small.jpg" />
     <None Include="Resources\loading.gif" />
   </ItemGroup>
   <ItemGroup>
