--- a/RedmiNote7ToolC/RedmiNote7ToolC/RedmiNote7ToolC.csproj
+++ b/RedmiNote7ToolC/RedmiNote7ToolC/RedmiNote7ToolC.csproj
@@ -29,8 +29,8 @@
     <PublisherName>Franco28</PublisherName>
     <SuiteName>RedmiNote7Tool</SuiteName>
     <OpenBrowserOnPublish>false</OpenBrowserOnPublish>
-    <ApplicationRevision>3</ApplicationRevision>
-    <ApplicationVersion>1.0.2.3</ApplicationVersion>
+    <ApplicationRevision>4</ApplicationRevision>
+    <ApplicationVersion>1.0.2.4</ApplicationVersion>
     <UseApplicationTrust>true</UseApplicationTrust>
     <CreateDesktopShortcut>true</CreateDesktopShortcut>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -83,14 +83,14 @@
   </PropertyGroup>
   <PropertyGroup />
   <PropertyGroup>
-    <SignManifests>false</SignManifests>
+    <SignManifests>true</SignManifests>
   </PropertyGroup>
   <PropertyGroup>
     <ManifestCertificateThumbprint>6FBC3C38854E0F2ACAF8A5D1CC3545DE3CACC678</ManifestCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup />
   <PropertyGroup>
-    <SignAssembly>false</SignAssembly>
+    <SignAssembly>true</SignAssembly>
   </PropertyGroup>
   <PropertyGroup />
   <PropertyGroup>
@@ -214,6 +214,8 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Resources\Res.es.resx" />
+    <EmbeddedResource Include="Resources\Res.en.resx" />
     <EmbeddedResource Include="Splash.resx">
       <DependentUpon>Splash.cs</DependentUpon>
     </EmbeddedResource>
@@ -240,13 +242,13 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\banner.jpg" />
+    <EmbeddedResource Include="Resources\banner.jpg" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="2.ico" />
-    <None Include="Resources\banner_large.jpg" />
-    <None Include="Resources\banner_small.jpg" />
-    <None Include="Resources\loading.gif" />
+    <EmbeddedResource Include="Resources\banner_large.jpg" />
+    <EmbeddedResource Include="Resources\banner_small.jpg" />
+    <EmbeddedResource Include="Resources\loading.gif" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.7.2">
