--- a/ToolEngine/ToolEngine/ToolEngine.csproj
+++ b/ToolEngine/ToolEngine/ToolEngine.csproj
@@ -81,6 +81,8 @@
   <ItemGroup>
     <Compile Include="Classes\BasicProgress.cs" />
     <Compile Include="Classes\BrowserCheck.cs" />
+    <Compile Include="Classes\CConfigDO.cs" />
+    <Compile Include="Classes\CConfigMng.cs" />
     <Compile Include="Classes\CheckFileSize.cs" />
     <Compile Include="Classes\Command.cs" />
     <Compile Include="Classes\DownloadEngineVisual.cs">
@@ -94,16 +96,26 @@
     <Compile Include="Classes\Folders.cs" />
     <Compile Include="Classes\GifImage.cs" />
     <Compile Include="Classes\InternetCheck.cs" />
-    <Compile Include="Classes\Lang.cs" />
     <Compile Include="Classes\Strings.cs" />
     <Compile Include="Classes\Unzip.cs" />
     <Compile Include="Classes\ZipFileWithProgress.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Classes\DownloadEngineVisual.resx">
       <DependentUpon>DownloadEngineVisual.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <None Include="Resources\en.resx" />
+    <None Include="Resources\es.resx" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
